kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python-svc
  name: python-svc
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: pythonapp
  type: ClusterIP
